deploy/minio-nx-cache/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-nx-cache
  labels:
    app.kubernetes.io/part-of: fleetshift
